# NextPolicyAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  benchmark_results.json  docker-compose.yml  npa.ini  pyproject.toml  requirements.txt  start-npa.ps1  start-npa.sh  stop-npa.ps1  stop-npa.sh  test_evaluator.py  test_formatter.py  test_new_features.py  test_parser.py  test_phase8_features.py
.github/workflows/: publish.yml
Documentation/: CLI_Referenz.md  Docker-Anleitung.md  Konfigurationsreferenz.md  OPA_Analyse_und_Anforderungsprofil.md  OPA_vs_NPA_Gap_Analysis.md  Performance_Vergleich_OPA_vs_NPA.md  REST_API_Referenz.md  Rego_Sprachreferenz.md  SDK_Referenz.md  Schnellstart.md  Web_Dashboard.md
examples/: README.md
examples/data-filtering/: data.json  input.json  policy.rego
examples/http-api-authz/: data.json  input.json  policy.rego
examples/jwt-validation/: data.json  input.json  policy.rego
examples/kubernetes-admission/: input-invalid.json  input-valid.json  policy.rego
examples/network-firewall/: input.json  policy.rego
examples/plugins/: README.md  __init__.py  audit_trail_plugin.py  builtin_config_plugin.py  metrics_plugin.py  rate_limit_plugin.py  webhook_notification_plugin.py
examples/rbac/: data.json  input.json  policy.rego
npa/: __init__.py  __main__.py
npa/ast/: __init__.py  builtins.py  compiler.py  lexer.py  parser.py  types.py
npa/bundle/: __init__.py  bundle.py  loader.py  sign.py
npa/cli/: main.py
npa/config/: config.py
npa/eval/: __init__.py  cache.py  partial.py  topdown.py  unify.py
npa/format/: __init__.py  formatter.py
npa/plugins/: manager.py
npa/sdk/: sdk.py
npa/server/: __init__.py  app.py  auth.py
npa/server/routes/: bundles.py  config.py  data.py  health.py  metrics.py  policy.py  query.py  ui_api.py
npa/server/static/: index.html
npa/server/static/css/: npa.css
npa/server/static/js/: app.js
npa/server/static/js/pages/: bundles.js  config.js  dashboard.js  databrowser.js  logs.js  playground.js  policies.js
npa/storage/: base.py  disk.py  inmemory.py
