[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextpolicyagent"
version = "1.0.0"
description = "Next Policy Agent — A high-performance, secure policy engine (Python/FastAPI rewrite of OPA)"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.12"
authors = [
    {name = "BLS-ISP"},
]
keywords = ["policy", "authorization", "rego", "opa", "security", "policy-engine", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

dependencies = [
    # Web Framework
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",

    # Performance
    "orjson>=3.10.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",

    # Security / Crypto
    "cryptography>=46.0.6",
    "PyJWT>=2.12.1",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",

    # Storage
    "aiosqlite>=0.20.0",

    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",

    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",

    # Networking
    "httpx>=0.28.0",

    # Utilities
    "cachetools>=5.5.0",
    "xxhash>=3.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.8",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://www.bls-isp.net/"
Repository = "https://github.com/BLS-ISP/NextPolicyAgent"
Documentation = "https://github.com/BLS-ISP/NextPolicyAgent/tree/main/Documentation"
"Bug Tracker" = "https://github.com/BLS-ISP/NextPolicyAgent/issues"
Changelog = "https://github.com/BLS-ISP/NextPolicyAgent/blob/main/CHANGELOG.md"

[project.scripts]
npa = "npa.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["npa"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "S", "B", "A", "C4", "UP", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
